--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ATC4-HQ-SERVER/Dockerfile
+          context: ATC4-HQ-SERVER
+          file: Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
