--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
+      - name: Debug: list repo (dispatch only)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "PWD: $(pwd)"
+          echo "Listing root:" 
+          ls -la
+          echo "Listing files dir:" 
+          ls -la files || true
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
