--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,61 +1,17 @@
-name: Build and push Docker image
+name: Build Docker image
 
 on:
   push:
-    branches:
-      - main
-      - dev-*
+    branches: [main]
   workflow_dispatch: {}
-
-permissions:
-  contents: read
-  packages: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Debug: list repo (dispatch only)
-        if: github.event_name == 'workflow_dispatch'
+      - name: Build Docker image
         run: |
-          echo "PWD: $(pwd)"
-          echo "Listing root:" 
-          ls -la
-          echo "Listing files dir:" 
-          ls -la files || true
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Compute lowercase repo info
-        id: repoinfo
-        run: |
-          echo "owner=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_OUTPUT
-          repo=${GITHUB_REPOSITORY#*/}
-          echo "repo=${repo,,}" >> $GITHUB_OUTPUT
-
-      - name: Build and push image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            ghcr.io/${{ steps.repoinfo.outputs.owner }}/${{ steps.repoinfo.outputs.repo }}:latest
-            ghcr.io/${{ steps.repoinfo.outputs.owner }}/${{ steps.repoinfo.outputs.repo }}:${{ github.sha }}
+          docker build -t atc4-hq-server .
