--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,9 @@
 name: Build Docker image
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches: [main]
@@ -12,10 +16,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build Docker image (buildx + load)
-        run: |
-          # use buildx and --load so the resulting image is available to local docker commands
-          docker buildx build --load -t atc4-hq-server .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image to GHCR
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          load: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/atc4-hq-server:latest
+            ghcr.io/${{ github.repository_owner }}/atc4-hq-server:${{ github.sha }}
 
       - name: Create container and extract binary (debug)
         shell: bash
